# xianzhi-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.ps1  stop.ps1
app/: __init__.py  config.py  logger.py  love_app.py  observability.py  security.py  tarot_app.py
app/agent/: __init__.py  base_agent.py  react_agent.py  tool_call_agent.py  xianzhi.py  xianzhi_langgraph.py  xianzhi_test_backup.py  xianzhi_workflow.py
app/api/: admin_accounts.py  admin_users.py  auth.py  chart_cases.py  common.py  deps.py  favorites.py  feedback.py  love.py  me.py  observability.py  profiles.py  rag.py  routes.py  state.py  tarot.py  tarot_records.py  tools.py  xianzhi.py
app/db/: __init__.py  user_data.py  users.py
app/domain/: __init__.py  bazi_engine.py
app/evaluation/: __init__.py  xianzhi_eval.py
app/memory/: __init__.py  chat_memory.py  postgres_memory.py
app/rag/: __init__.py  rag_chain.py  retrieval.py  vector_store.py
app/tools/: __init__.py  bazi.py  cache.py  (+7 more)
docs/: multi_agent_architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
tests/: test_api_integration.py  test_bazi.py  test_knowledge_docs.py  test_rag_search.py  test_xianzhi_eval.py  test_xianzhi_langgraph.py  test_xianzhi_workflow.py
uniapp/: package-lock.json  package.json  vite.config.ts
智能体开发笔记/: .env.example  README.md  __init__.py  config.py  requirements.txt
(+232 files in other folders)
