[project]
name = "xianzhi-agent"
version = "0.1.0"
description = "先知 - 八字命理分析预测智能体"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0,<0.5.0",
    "langchain-chroma>=1.0.0,<2.0.0",
    "langchain-postgres>=0.0.17,<0.1.0",
    "langchain-text-splitters>=0.2.0",
    "chromadb>=1.0.0,<2.0.0",
    "dashscope>=1.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "lunar-python>=1.3.4",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "loguru>=0.7.2",
    "mcp>=1.28.0",
    "psycopg[binary]>=3.2.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
